# flambda-backend

./: .depend  .depend.menhir  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .local-merlin-binaries  .ocamldebug  .ocamlformat  .ocamlformat-enable  5.2-to-review  CONTRIBUTING.md  Changes  HACKING.jst.adoc  HACKING.md  HACKING.ox.adoc  LICENSE  Makefile  Makefile.common  Makefile.common-jst  Makefile.common-ox  Makefile.config.in  Makefile.in  Makefile.jst  Makefile.menhir  Makefile.ox  Makefile.upstream  README.md  VERSION  aclocal.m4  arm64-issue-debug-upstream.patch  arm64.S  async_exns.ml  bug.ml  build_ocaml_compiler.sexp  command  compare.sh  configure  configure.ac  diff_compiler_versions.sh  (+49 more)
backend/: .ocamlformat  .ocamlformat-enable  CSE_utils.ml  CSE_utils.mli  CSEgen.ml  CSEgen.mli  address_sanitizer.ml  address_sanitizer.mli  afl_instrument.ml  afl_instrument.mli  analyze_tailcall_graph.ml  analyze_tailcall_graph.mli  arm64_ast.ml  arm64_ast.mli  asmgen.ml  asmgen.mli  asminstantiator.ml  asminstantiator.mli  asmlibrarian.ml  asmlink.ml  asmlink.mli  asmpackager.ml  asmpackager.mli  branch_relaxation.ml  branch_relaxation.mli  branch_relaxation_intf.ml  branch_relaxation_intf.mli  cfg_selectgen.ml  cfg_selectgen.mli  cfg_selectgen_target_intf.ml  cfg_selection.mli  cfgize.ml  cfgize.mli  checkmach.ml  checkmach.mli  checkmach_types.ml  checkmach_types.mli  checks.ml  checks.mli  cmm.ml  (+120 more)
debugger/: .depend  command_line.ml  dune  eval.ml  frames.ml  loadprinter.ml  main.ml  parameters.ml  printval.ml  program_management.ml
driver/: boot_ocamlopt.ml  compenv.ml  compenv.mli  compile.ml  compile.mli  compile_common.ml  compile_common.mli  compiler_hooks.ml  compiler_hooks.mli  compmisc.ml  compmisc.mli  dune  flambda_backend_args.ml  flambda_backend_args.mli  flambda_backend_flags.ml  flambda_backend_flags.mli  flambda_backend_main.ml  flambda_backend_main.ml.rej  instantiator.ml  instantiator.mli  main_args.ml  main_args.mli  maindriver.ml  makedepend.ml  optcompile.ml  optcompile.mli  optmaindriver.ml  optmaindriver.mli  oxcaml_args.ml  oxcaml_args.mli  oxcaml_flags.ml  oxcaml_flags.mli  oxcaml_main.ml  pparse.ml
extract_externals/: .ocamlformat  README.md  dune  environments.ml  environments.mli  extract_externals.ml  extract_externals.mli  shapes.ml  shapes.mli  traverse_typed_tree.ml  traverse_typed_tree.mli  value_shapes.ml  value_shapes.mli
middle_end/: .ocamlformat  .ocamlformat-enable  backend_intf.mli  backend_var.ml  backend_var.mli  clambda.ml  clambda.mli  clambda_layout.ml  clambda_layout.mli  clambda_primitives.ml  clambda_primitives.mli  cmx_sections.ml  cmx_sections.mli  compilenv.ml  compilenv.mli  convert_primitives.ml  dune  internal_variable_names.ml  internal_variable_names.mli  mangling.ml  mangling.mli  printclambda.ml  printclambda_primitives.ml  semantics_of_primitives.ml  semantics_of_primitives.mli  symbol.ml  symbol.mli  symbol_utils.ml  symbol_utils.mli  variable.ml  variable.mli
ocaml/: .depend  .depend.menhir  .gitattributes  .gitignore  Changes  HACKING.jst.adoc  Makefile  Makefile.build_config.in  Makefile.common  Makefile.common-jst  Makefile.config.in  Makefile.menhir  VERSION  aclocal.m4  build.sh  build_ocaml_compiler.sexp  configure  configure.ac  dune  dune-project.jst  dune-project.unwanted  dune.no_menhir  dune.with_menhir  jst.dune
ocamltest/: .depend  Makefile  OCAMLTEST.org  actions.ml  actions.mli  builtin_actions.ml  builtin_variables.ml  builtin_variables.mli  dune  main.ml  ocaml_actions.ml  ocaml_commands.ml  ocaml_commands.mli  ocaml_compilers.ml  ocaml_compilers.mli  ocaml_files.ml  ocaml_modifiers.ml  ocaml_modifiers.mli  ocaml_tests.ml  ocaml_tests.mli  ocaml_tools.ml  ocaml_tools.mli  ocaml_toplevels.ml  ocaml_toplevels.mli  ocaml_variables.ml  ocaml_variables.mli  ocamltest_config.ml.in  ocamltest_config.mli  ocamltest_stdlib.ml  result.ml  result.mli  run_unix.c  strace.ml  tests.ml  tests.mli  tsl_ast.mli  tsl_lexer.mll  tsl_semantics.ml  tsl_semantics.mli
parsing/: .ocamlformat-enable  ast_helper.ml  ast_helper.mli  ast_invariants.ml  ast_iterator.ml  ast_iterator.mli  ast_mapper.ml  ast_mapper.mli  asttypes.mli  attr_helper.ml  builtin_attributes.ml  builtin_attributes.mli  depend.ml  dune  extensions.ml  extensions.mli  extensions_parsing.ml  extensions_parsing.mli  jane_asttypes.mli  jane_syntax.ml  jane_syntax.mli  jane_syntax_parsing.ml  jane_syntax_parsing.mli  language_extension.ml  language_extension.mli  lexer.mll  location.ml  location.mli  parse.ml  parser.cmly  parser.mly  parsetree.mli  pprintast.ml  pprintast.mli  printast.ml  printast.mli  syntaxerr.ml  syntaxerr.mli  unit_info.ml  unit_info.mli
runtime/: Makefile  alloc.c  amd64.S  amd64nt.asm  arm64.S  array.c  backtrace_nat.c  bigarray.c  callback.c  codefrag.c  compare.c  custom.c  debugger.c  domain.c  dune  dynlink.c  extern.c  fail_byt.c  fail_nat.c  fiber.c  finalise.c  fix_code.c  float32.c  frame_descriptors.c  freelist.c  gc_ctrl.c  gc_stats.c  gen_primsc.sh  globroots.c  hash.c  i386.S  instrtrace.c  intern.c  interp.c  ints.c  io.c  lf_skiplist.c  major_gc.c  memory.c  memprof.c  (+27 more)
runtime4/: Makefile  alloc.c  amd64.S  amd64nt.asm  arm.S  arm64.S  array.c  backtrace.c  backtrace_nat.c  bigarray.c  compact.c  compare.c  custom.c  debugger.c  domain.c  dune  dynlink.c  dynlink_nat.c  extern.c  fail_byt.c  fail_nat.c  finalise.c  fix_code.c  float32.c  gc_ctrl.c  gen_primitives.sh  hash.c  i386.S  instrtrace.c  intern.c  interp.c  ints.c  io.c  major_gc.c  memory.c  memprof.c  meta.c  misc.c  obj.c  power.S  (+12 more)
tools/: .depend  .ocamlformat  .ocamlformat-enable  .ocamlformat-ignore  Makefile  build_compiler_mutant.sh  bump_magic_numbers.sh  check_installed_tree.sh  compare.sh  debug_printers  debug_printers.ml  diff_compiler_versions.sh  dumpobj.ml  dune  eqparsetree.ml  flambda_backend_objinfo.ml  gen_compiler_libs_installation.ml  gen_sizeclasses.ml  generate_cached_generic_functions.ml  generate_cached_startup.ml  lintapidiff.ml  list-globals  magic  merge_archives.ml  merge_dot_a_files.sh  objinfo.ml  (+5 more)
(+8108 files in other folders)
